package gr.ds.unipi.noda.api.neo4j.sortOperators;

final class OperatorAsc extends SortOperator {

    private OperatorAsc(String fieldName) {
        super(fieldName);
    }

    public static SortOperator newOperatorAsc(String fieldName) {
        return new OperatorAsc(fieldName);
    }

    @Override
    protected String getSortCondition() {
        return " ASC ";
    }

}
