@startuml

title __SORTOPERATORS's Class Diagram__\n

  namespace gr.ds.unipi.noda.api.neo4j {
    namespace sortOperators {
      class gr.ds.unipi.noda.api.neo4j.sortOperators.Neo4jSortOperatorFactory {
          + newOperatorAsc()
          + newOperatorDesc()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.neo4j {
    namespace sortOperators {
      class gr.ds.unipi.noda.api.neo4j.sortOperators.OperatorAsc {
          {static} + newOperatorAsc()
          # getSortCondition()
          - OperatorAsc()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.neo4j {
    namespace sortOperators {
      class gr.ds.unipi.noda.api.neo4j.sortOperators.OperatorDesc {
          {static} + newOperatorDesc()
          # getSortCondition()
          - OperatorDesc()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.neo4j {
    namespace sortOperators {
      abstract class gr.ds.unipi.noda.api.neo4j.sortOperators.SortOperator {
          + getOperatorExpression()
          # SortOperator()
          {abstract} # getSortCondition()
      }
    }
  }
  

  gr.ds.unipi.noda.api.neo4j.sortOperators.Neo4jSortOperatorFactory -up-|> gr.ds.unipi.noda.api.core.operators.sortOperators.BaseSortOperatorFactory
  gr.ds.unipi.noda.api.neo4j.sortOperators.OperatorAsc -up-|> gr.ds.unipi.noda.api.neo4j.sortOperators.SortOperator
  gr.ds.unipi.noda.api.neo4j.sortOperators.OperatorDesc -up-|> gr.ds.unipi.noda.api.neo4j.sortOperators.SortOperator
  gr.ds.unipi.noda.api.neo4j.sortOperators.SortOperator -up-|> gr.ds.unipi.noda.api.core.operators.sortOperators.SortOperator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
